CSS/style.css
/* ... */
.price .unit-monetary {
  margin-top: 5px;

  font-style: normal;
  font-weight: 700;
  font-size: 30px;
  line-height: 13px;
  color: #ffffff;
  text-shadow: 0.5px 0.9px 3px rgba(49, 50, 53, 0.5);
}

.hit-item .ice-cream-name {
  position: relative;
  bottom: 5px;

  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 22px;
  align-items: center;
  text-align: center;
  color: #ffffff;
  text-decoration: underline;
}

/* SEO */
.SEO {
  padding: 26px 20px 24px;
  margin: 33px 27px 0;

  background-color: var(--color-backround-default);
  background: url(/IMG/Waffle_background.png) no-repeat;
  background-size: 100% 100%;
}

.SEO h3 {
  padding: 0;
  margin: 0;

  font-style: normal;
  font-weight: 500;
  font-size: 24px;
  line-height: 30px;
  align-items: center;
  color: #323232;
}

.SEO .SEO-container {
  padding: 0;
  margin: 0;
}

.SEO-list {
  padding: 0;
  margin: 0;

  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 28px;
  grid-row-gap: 2px;
}

.SEO-list li {
  display: flex;

  margin: 0;
  padding: 0;
}

.SEO-list .SEO-icon {
  margin-right: 8px;
}

#first-row.SEO-icon {
  position: relative;
  bottom: 11px;
}

#second-row.SEO-icon {
  position: relative;
  bottom: 22px;
}

.SEO-list p {
  padding-top: 20px;
  margin: 0;

  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
  align-items: center;
  color: #323232;
}

/* Контейнер новости+рассылка */
.news-mailing-container {
  margin: 40px 27px 40px;
  padding: 0;

  display: flex;
}

/* Новости */
.news {
  margin: 0;
  padding: 23px 260px 40px 19px;

  text-align: left;

  background-color: var(--color-backround-default);
  background: url(/IMG/Strawberry_background.png) no-repeat;
  background-size: 100% 100%;
}

.news h4 {
  margin: 0 0 4px;
  padding: 0;

  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 22px;
  align-items: center;
  color: #323232;
}

.news a {
  margin: 0;
  margin-right: 135px;
  padding: 0;

  font-style: normal;
  font-weight: 700;
  font-size: 24px;
  line-height: 30px;
  align-items: center;
  color: #323232;

  text-decoration: underline 2px solid;
  text-decoration-skip-ink: none;
  text-underline-offset: 3px;
}

.news a:hover,
.news a:focus,
.news a:active {
  color: #e84d37;
}

/* Рассылка */
.mailing {
  margin-left: 26px;
  padding: 34px 26px 40px;

  display: flex;
  flex-direction: column;

  background-color: var(--color-backround-default);
  background: url(/IMG/Mailing.png) no-repeat;
  background-size: 100% 100%;
}

.mailing p {
  margin: 0;
  padding: 0;

  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
  align-items: center;
  color: #5a5a5a;
}

.email-form-container {
  margin-top: 31px;
  display: flex;
  align-items: center;
}

.email-form-container input {
  width: 335px;
  padding: 9px 18px 9px 13px;
  margin-top: 5px;

  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #999999;

  background: #ffffff;
  border: 1px solid rgba(178, 178, 178, 0.52);
  border-radius: 5px;
}

.email-form-container button {
  margin-top: 3px;
  margin-left: 12px;
  padding: 9px 18px 11px;

  font-weight: 700;
  font-size: 18px;
  line-height: 24px;
  align-items: center;
  color: #fefefe;
}

/* Карта */
.map-container {
  position: relative;

  margin: 0;
  padding: 0;

  background-color: var(--color-backround-default);
}

.map {
  position: relative;
  z-index: 1;

  margin: 0;
  padding: 0;
}

.yandex-map {
  display: flex;
}

.address {
  position: absolute;
  z-index: 2;
  right: 27px;
  top: 62px;

  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 29px 26px 31px;

  font-style: normal;
  color: #323232;
  background: rgba(255, 255, 255, 0.98);
  border-radius: 10px;
}

.address h5 {
  margin: 0;
  width: 155px;

  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  align-items: center;
}

.contacts-container :nth-child(1) {
  margin: 1px 0 0;
  width: 250px;

  font-weight: 700;
  font-size: 18px;
  line-height: 24px;
  align-items: center;
}

.contacts-container :nth-child(2) {
  margin: 18px 0 0;
  width: 201px;

  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  align-items: center;
}

.contacts-container :nth-child(3) {
  margin: 5px 0 0;
  width: 182px;

  font-weight: 700;
  font-size: 18px;
  line-height: 22px;
  align-items: center;
}

.contacts-container :nth-child(4) {
  margin: 2px 0 0;
  width: 182px;

  font-weight: 400;
  font-size: 14px;
  line-height: 22px;
  align-items: center;
}

.address button {
  margin: 23px 0 0;
  padding: 9px 24px 11px;

  text-align: center;
  font-weight: 700;
  font-size: 18px;
  line-height: 24px;
  color: #fefefe;
}

/* Подвал */
.main-footer {
  margin: 18px 26px 25px 28px;
  padding: 0;

  display: flex;
  justify-content: space-between;
}

.social-media-and-menu-container {
  display: flex;
  gap: 214px;
}

/* Соцсети */
.social-media {
  display: flex;
  justify-content: center;

  gap: 11px;
  margin-top: 13px;
}

.social-media li {
  display: flex;
  align-items: center;
}

.social-media-link {
  all: unset;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 3px solid rgba(255, 255, 255, 0.5);
  opacity: 0.8;
  border-radius: 50%;
}

.social-media-link:hover,
.social-media-link:focus {
  border: 3px solid rgba(255, 255, 255, 0.7);
  opacity: 1;
}

.social-media-link:active path {
  fill: #e9e9e9;
}

/* Меню подвала */
.footer-menu-list {
  margin-top: 17px;

  text-decoration: underline 1px solid rgba(255, 255, 255, 0.2);
  text-decoration-skip-ink: none;
  text-underline-offset: 3px;

  display: grid;
  grid-template-columns: repeat(3, max-content);
  grid-template-rows: repeat(2, max-content);

  font-weight: 400;
  font-size: 13px;
  line-height: 16px;
  align-items: start;
  color: #ffffff;
}
/* ... */

